#1992: Address review feedback - Improve GitContextMock implementation - Use FileAccess for file operations