@@ -1,18 +1,15 @@
 package com.devonfw.tools.ide.git;
 
-import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.List;
-import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Stream;
 
+import com.devonfw.tools.ide.context.IdeContext;
+import com.devonfw.tools.ide.io.FileAccess;
+import com.devonfw.tools.ide.io.FileCopyMode;
 import com.devonfw.tools.ide.io.ini.IniFile;
 import com.devonfw.tools.ide.io.ini.IniFileImpl;
 import com.devonfw.tools.ide.io.ini.IniSection;
@@ -20,25 +17,18 @@ import com.devonfw.tools.ide.io.ini.IniSection;
 /**
  * Mock implementation of {@link GitContext}.
  */
-public class GitContextMock implements GitContext {
+public class GitContextMock extends GitContextImpl {
 
   private static final String MOCKED_URL_VALUE = "mocked url value";
 
   private final Map<Path, List<GitCommit>> pending = new HashMap<>();
 
-  @Override
-  public void pullOrCloneIfNeeded(GitUrl gitUrl, Path repository) {
-    Path gitFolder = repository.resolve(GIT_FOLDER);
-    if (Files.exists(gitFolder)) {
-      pull(repository);
-    } else {
-      clone(gitUrl, repository);
-    }
-  }
+  /**
+   * @param context the {@link IdeContext context}.
+   */
+  public GitContextMock(IdeContext context) {
 
-  @Override
-  public void pullOrCloneAndResetIfNeeded(GitUrl gitUrl, Path repository, String remoteName) {
-    pullOrCloneIfNeeded(gitUrl, repository);
+    super(context);
   }
 
   @Override
@@ -51,11 +41,6 @@ public class GitContextMock implements GitContext {
     return false;
   }
 
-  @Override
-  public void pullOrClone(GitUrl gitUrl, Path repository) {
-    pullOrCloneIfNeeded(gitUrl, repository);
-  }
-
   /**
    * Simulates cloning a remote repository into the provided local path for tests.
    *
@@ -64,33 +49,31 @@ public class GitContextMock implements GitContext {
    */
   @Override
   public void clone(GitUrl gitUrl, Path repository) {
-    try {
-      Files.createDirectories(repository);
-      Path gitFolder = repository.resolve(GIT_FOLDER);
-      Files.createDirectories(gitFolder);
-      // create HEAD pointing to branch
-      String branch = gitUrl.branch();
-      if (branch == null || branch.isEmpty()) {
-        branch = GitUrl.BRANCH_MAIN;
-      }
-      String headContent = "ref: refs/heads/" + branch;
-      Files.writeString(gitFolder.resolve(FILE_HEAD), headContent);
-      // create FETCH_HEAD containing hashCode of GitUrl and also create a refs/heads entry
-      String lastId = String.valueOf(gitUrl.hashCode());
-      Files.writeString(gitFolder.resolve(FILE_FETCH_HEAD), lastId);
-      Path refsHeads = gitFolder.resolve("refs").resolve("heads");
-      Files.createDirectories(refsHeads);
-      Path branchRefPath = refsHeads.resolve(branch);
-      Files.createDirectories(branchRefPath.getParent());
-      Files.writeString(branchRefPath, lastId);
-      // create .git/config using the project's IniFile support
-      IniFile cfg = new IniFileImpl();
-      IniSection originSection = cfg.getOrCreateSection("remote \"origin\"");
-      originSection.setProperty("url", gitUrl.url());
-      Files.writeString(gitFolder.resolve("config"), cfg.toString());
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to clone Git repository " + gitUrl + " to " + repository, e);
+
+    FileAccess fileAccess = this.context.getFileAccess();
+    fileAccess.mkdirs(repository);
+
+    Path gitFolder = repository.resolve(GIT_FOLDER);
+    fileAccess.mkdirs(gitFolder);
+    String branch = gitUrl.branch();
+    if ((branch == null) || branch.isEmpty()) {
+      branch = GitUrl.BRANCH_MAIN;
     }
+
+    String headContent = "ref: refs/heads/" + branch;
+    String lastId = String.valueOf(gitUrl.hashCode());
+
+    fileAccess.writeFileContent(headContent, gitFolder.resolve(FILE_HEAD));
+    fileAccess.writeFileContent(lastId, gitFolder.resolve(FILE_FETCH_HEAD));
+
+    Path branchRefPath = gitFolder.resolve("refs").resolve("heads").resolve(branch);
+    fileAccess.mkdirs(branchRefPath.getParent());
+    fileAccess.writeFileContent(lastId, branchRefPath);
+
+    IniFile config = new IniFileImpl();
+    IniSection originSection = config.getOrCreateSection("remote \"origin\"");
+    originSection.setProperty("url", gitUrl.url());
+    fileAccess.writeIniFile(config, gitFolder.resolve("config"));
   }
 
   /**
@@ -100,50 +83,44 @@ public class GitContextMock implements GitContext {
    */
   @Override
   public void pull(Path repository) {
-    // apply all pending commits for this repository if any
-    List<GitCommit> list = this.pending.get(repository);
-    if (list == null || list.isEmpty()) {
+    List<GitCommit> commits = this.pending.get(repository);
+    if ((commits == null) || commits.isEmpty()) {
       return;
     }
-    // remember last pending commit id before applying
-    GitCommit last = list.get(list.size() - 1);
-    try {
-      for (GitCommit commit : new ArrayList<>(list)) {
-        for (GitChange change : commit.getChanges()) {
-          Path src = change.content();
-          Path dest = repository.resolve(change.target());
-          // ensure parent dirs
-          Files.createDirectories(dest.getParent());
-          // copy file or directory
-          if (Files.isDirectory(src)) {
-            copyDirectory(src, dest);
-          } else {
-            Files.copy(src, dest, StandardCopyOption.REPLACE_EXISTING);
-          }
+    FileAccess fileAccess = this.context.getFileAccess();
+    GitCommit lastCommit = commits.getLast();
+
+    for (GitCommit commit : commits) {
+      for (GitChange change : commit.changes()) {
+        Path source = change.content();
+        Path target = repository.resolve(change.target());
+
+        FileCopyMode copyMode;
+        if (fileAccess.isFile(source)) {
+          copyMode = FileCopyMode.COPY_FILE_TO_TARGET_OVERRIDE;
+        } else {
+          copyMode = FileCopyMode.COPY_TREE_CONTENT;
         }
-        // remove applied commit
-        list.remove(0);
+
+        fileAccess.copy(source, target, copyMode);
       }
-      // update refs/heads/<branch> and FETCH_HEAD to last applied commit id
-      Path gitFolder = repository.resolve(GIT_FOLDER);
-      if (!Files.exists(gitFolder)) {
-        Files.createDirectories(gitFolder);
-      }
-      String branch = determineCurrentBranch(repository);
-      String lastId = String.valueOf(last.hashCode());
-      Path refsHeads = gitFolder.resolve("refs").resolve("heads");
-      Files.createDirectories(refsHeads);
-      Path branchRefPath = refsHeads.resolve(branch);
-      Files.createDirectories(branchRefPath.getParent());
-      Files.writeString(branchRefPath, lastId);
-      Files.writeString(gitFolder.resolve(FILE_FETCH_HEAD), lastId);
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to pull repository " + repository, e);
     }
+    Path gitFolder = repository.resolve(GIT_FOLDER);
+    fileAccess.mkdirs(gitFolder);
+
+    String branch = determineCurrentBranch(repository);
+    String lastCommitId = String.valueOf(lastCommit.hashCode());
+
+    Path branchRefPath = gitFolder.resolve("refs").resolve("heads").resolve(branch);
+    fileAccess.mkdirs(branchRefPath.getParent());
+    fileAccess.writeFileContent(lastCommitId, branchRefPath);
+    fileAccess.writeFileContent(lastCommitId, gitFolder.resolve(FILE_FETCH_HEAD));
+
+    this.pending.remove(repository);
   }
 
   /**
-   * Simulates fetching by updating {@code .git/FETCH_HEAD} to the id of the last pending commit.
+   * Simulates fetching by updating {@code .git/FETCH_HEAD} to the ID of the latest pending commit.
    *
    * @param repository the repository to fetch into
    * @param remote the remote name (ignored in the mock)
@@ -151,18 +128,14 @@ public class GitContextMock implements GitContext {
    */
   @Override
   public void fetch(Path repository, String remote, String branch) {
-    List<GitCommit> list = this.pending.get(repository);
-    if (list == null || list.isEmpty()) {
+    List<GitCommit> commits = this.pending.get(repository);
+    if ((commits == null) || commits.isEmpty()) {
       return;
     }
-    GitCommit last = list.get(list.size() - 1);
-    Path gitFolder = repository.resolve(GIT_FOLDER);
-    try {
-      Files.createDirectories(gitFolder);
-      Files.writeString(gitFolder.resolve(FILE_FETCH_HEAD), String.valueOf(last.hashCode()));
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to fetch repository " + repository, e);
-    }
+    GitCommit lastCommit = commits.getLast();
+    Path fetchHead = repository.resolve(GIT_FOLDER).resolve(FILE_FETCH_HEAD);
+
+    this.context.getFileAccess().writeFileContent(String.valueOf(lastCommit.hashCode()), fetchHead);
   }
 
   @Override
@@ -183,21 +156,20 @@ public class GitContextMock implements GitContext {
    */
   @Override
   public String retrieveGitUrl(Path repository) {
-    Path cfg = repository.resolve(GIT_FOLDER).resolve("config");
-    try {
-      if (Files.exists(cfg)) {
-        IniFile config = new IniFileImpl();
-        readIniFile(cfg, config);
-        IniSection origin = config.getSection("remote \"origin\"");
-        if (origin != null) {
-          String url = origin.getPropertyValue("url");
-          if (url != null && !url.isBlank()) {
-            return url.trim();
-          }
-        }
+    Path configPath = repository.resolve(GIT_FOLDER).resolve("config");
+    FileAccess fileAccess = this.context.getFileAccess();
+
+    if (!fileAccess.isFile(configPath)) {
+      return MOCKED_URL_VALUE;
+    }
+
+    IniFile config = fileAccess.readIniFile(configPath);
+    IniSection origin = config.getSection("remote \"origin\"");
+    if (origin != null) {
+      String url = origin.getPropertyValue("url");
+      if ((url != null) && !url.isBlank()) {
+        return url.trim();
       }
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to read remote URL from repository config " + cfg, e);
     }
     return MOCKED_URL_VALUE;
   }
@@ -219,29 +191,6 @@ public class GitContextMock implements GitContext {
   }
 
   /**
-   * Performs fetch only when pending commits exist for the repository.
-   *
-   * @param repository the repository to potentially fetch
-   * @param remoteName the remote name (ignored)
-   * @param branch the branch name (ignored)
-   * @return {@code true} if fetch was performed, {@code false} otherwise
-   */
-  @Override
-  public boolean fetchIfNeeded(Path repository, String remoteName, String branch) {
-    List<GitCommit> list = this.pending.get(repository);
-    if (list == null || list.isEmpty()) {
-      return false;
-    }
-    fetch(repository, remoteName, branch);
-    return true;
-  }
-
-  @Override
-  public boolean fetchIfNeeded(Path repository) {
-    return fetchIfNeeded(repository, DEFAULT_REMOTE, null);
-  }
-
-  /**
    * Checks whether a mocked remote update is available by comparing {@code .git/FETCH_HEAD} with the current HEAD (resolving refs when necessary).
    *
    * @param repository the repository to check
@@ -250,27 +199,15 @@ public class GitContextMock implements GitContext {
   @Override
   public boolean isRepositoryUpdateAvailable(Path repository) {
     Path gitFolder = repository.resolve(GIT_FOLDER);
-    Path fetch = gitFolder.resolve(FILE_FETCH_HEAD);
-    Path head = gitFolder.resolve(FILE_HEAD);
-    try {
-      if (!Files.exists(fetch) || !Files.exists(head)) {
-        return false;
-      }
-      String f = Files.readString(fetch).trim();
-      String h = Files.readString(head).trim();
-      if (h.startsWith("ref:")) {
-        String ref = h.substring("ref:".length()).trim();
-        Path refPath = gitFolder.resolve(ref);
-        if (!Files.exists(refPath)) {
-          // cannot resolve HEAD ref -> treat as no update
-          return false;
-        }
-        h = Files.readString(refPath).trim();
-      }
-      return !f.equals(h);
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to check for repository update in " + repository, e);
+    FileAccess fileAccess = this.context.getFileAccess();
+
+    String fetchCommitId = fileAccess.readFileContent(gitFolder.resolve(FILE_FETCH_HEAD));
+    String currentCommitId = determineCurrentCommitId(repository);
+
+    if ((fetchCommitId == null) || (currentCommitId == null)) {
+      return false;
     }
+    return !fetchCommitId.trim().equals(currentCommitId.trim());
   }
 
   /**
@@ -282,51 +219,36 @@ public class GitContextMock implements GitContext {
    */
   @Override
   public boolean isRepositoryUpdateAvailable(Path repository, Path trackedCommitIdPath) {
-    Path gitFolder = repository.resolve(GIT_FOLDER);
-    Path fetch = gitFolder.resolve(FILE_FETCH_HEAD);
-    try {
-      if (!Files.exists(fetch) || !Files.exists(trackedCommitIdPath)) {
-        return false;
-      }
-      String f = Files.readString(fetch).trim();
-      String t = Files.readString(trackedCommitIdPath).trim();
-      return !f.equals(t);
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to check for repository update in " + repository, e);
+    FileAccess fileAccess = this.context.getFileAccess();
+    String fetchCommitId = fileAccess.readFileContent(repository.resolve(GIT_FOLDER).resolve(FILE_FETCH_HEAD));
+    String trackedCommitId = fileAccess.readFileContent(trackedCommitIdPath);
+
+    if ((fetchCommitId == null) || (trackedCommitId == null)) {
+      return false;
     }
+    return !fetchCommitId.trim().equals(trackedCommitId.trim());
   }
 
   /**
-   * Determines the current branch from {@code .git/HEAD}. If HEAD contains a ref the branch name is extracted from the ref. If HEAD does not exist the default
-   * branch {@link GitUrl#BRANCH_MAIN} is returned.
+   * Determines the current branch from {@code .git/HEAD}.
    *
-   * @param repository the repository to inspect
-   * @return the current branch name
+   * @param repository the repository to inspect.
+   * @return the current branch name.
    */
   @Override
   public String determineCurrentBranch(Path repository) {
     Path head = repository.resolve(GIT_FOLDER).resolve(FILE_HEAD);
-    if (!Files.exists(head)) {
+    String content = this.context.getFileAccess().readFileContent(head);
+    if ((content == null) || content.isBlank()) {
       return GitUrl.BRANCH_MAIN;
     }
-    try {
-      String content = Files.readString(head).trim();
-      final String prefix = "ref: refs/heads/";
-      if (content.startsWith(prefix)) {
-        return content.substring(prefix.length());
-      }
-      // fallback: handle other ref formats
-      if (content.startsWith("ref:")) {
-        int idx = content.lastIndexOf('/');
-        if (idx >= 0 && idx + 1 < content.length()) {
-          return content.substring(idx + 1);
-        }
-      }
-      // fallback: return content
-      return content;
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to determine current branch for repository " + repository, e);
+    content = content.trim();
+    final String prefix = "ref: refs/heads/";
+    if (content.startsWith(prefix)) {
+      return content.substring(prefix.length());
     }
+
+    return content;
   }
 
   @Override
@@ -341,172 +263,76 @@ public class GitContextMock implements GitContext {
    * @param commits the commits to add
    */
   public void addChanges(Path repository, GitCommit... commits) {
-    List<GitCommit> list = this.pending.computeIfAbsent(repository, k -> new ArrayList<>());
-    if (commits != null) {
-      Collections.addAll(list, commits);
+    if (commits == null) {
+      return;
     }
+    List<GitCommit> pendingCommits = this.pending.computeIfAbsent(repository, k -> new ArrayList<>());
+    Collections.addAll(pendingCommits, commits);
   }
 
-  private static void readIniFile(Path file, IniFile iniFile) throws IOException {
-    List<String> iniLines = Files.readAllLines(file);
-    IniSection currentIniSection = iniFile.getInitialSection();
-    for (String line : iniLines) {
-      if (line.trim().startsWith("[")) {
-        currentIniSection = iniFile.getOrCreateSection(line);
-      } else if (line.trim().startsWith("#") || line.trim().startsWith(";")) {
-        currentIniSection.addComment(line);
-      } else {
-        int index = line.indexOf('=');
-        if (index > 0) {
-          currentIniSection.setPropertyLine(line);
-        }
-      }
-    }
-  }
+  @Override
+  protected String determineCurrentCommitId(Path repository) {
 
-  /**
-   * Copies a directory tree from {@code source} to {@code target}, overwriting existing files.
-   *
-   * @param source the source directory
-   * @param target the destination directory
-   * @throws IOException on IO errors
-   */
-  private static void copyDirectory(Path source, Path target) throws IOException {
-    try (Stream<Path> stream = Files.walk(source)) {
-      stream.forEach(s -> {
-        try {
-          Path rel = source.relativize(s);
-          Path dest = target.resolve(rel);
-          if (Files.isDirectory(s)) {
-            Files.createDirectories(dest);
-          } else {
-            Files.createDirectories(dest.getParent());
-            Files.copy(s, dest, StandardCopyOption.REPLACE_EXISTING);
-          }
-        } catch (IOException e) {
-          throw new IllegalStateException("Failed to copy directory " + source + " to " + target, e);
-        }
-      });
+    Path gitFolder = repository.resolve(GIT_FOLDER);
+    FileAccess fileAccess = this.context.getFileAccess();
+
+    String headContent = fileAccess.readFileContent(gitFolder.resolve(FILE_HEAD));
+
+    if ((headContent == null) || headContent.isBlank()) {
+      return null;
     }
+
+    headContent = headContent.trim();
+
+    if (!headContent.startsWith("ref:")) {
+      return headContent;
+    }
+
+    final String ref = headContent.substring("ref:".length()).trim();
+    String commitId = fileAccess.readFileContent(gitFolder.resolve(ref));
+
+    if (commitId == null) {
+      return null;
+    }
+    return commitId.trim();
   }
 
   /**
    * Represents a file or directory change to apply when pulling a commit.
+   *
+   * @param content path to the file or directory containing the change.
+   * @param target relative target path inside the repository.
    */
-  public static class GitChange {
+  public record GitChange(Path content, Path target) {
 
-    private final Path content;
-    private final Path target;
-
-    public GitChange(Path content, Path target) {
-      this.content = content;
-      this.target = target;
-    }
-
-    public Path content() {
-      return this.content;
-    }
-
-    public Path target() {
-      return this.target;
-    }
-
-    @Override
-    public boolean equals(Object obj) {
-      if (this == obj) {
-        return true;
-      }
-      if (!(obj instanceof GitChange other)) {
-        return false;
-      }
-      return this.content.equals(other.content) && this.target.equals(other.target);
-    }
-
-    @Override
-    public int hashCode() {
-      int result = this.content.hashCode();
-      result = 31 * result + this.target.hashCode();
-      return result;
-    }
   }
 
   /**
    * Represents a commit containing one or more {@link GitChange}s.
-   */
-  public static class GitCommit {
-
-    private final List<GitChange> changes = new ArrayList<>();
-
-    public GitCommit(GitChange... changes) {
-      if (changes != null) {
-        for (GitChange c : changes) {
-          this.changes.add(c);
-        }
-      }
-    }
-
-    public List<GitChange> getChanges() {
-      return Collections.unmodifiableList(this.changes);
-    }
-
-    @Override
-    public boolean equals(Object obj) {
-      if (this == obj) {
-        return true;
-      }
-      if (!(obj instanceof GitCommit other)) {
-        return false;
-      }
-      return this.changes.equals(other.changes);
-    }
-
-    @Override
-    public int hashCode() {
-      return this.changes.hashCode();
-    }
-  }
-
-
-  /**
-   * Saves the current commit id of the repository into the given file. If HEAD is a ref (e.g. "ref: refs/heads/main") the referenced ref file
-   * (.git/refs/heads/main) is read to obtain the commit id. Otherwise the HEAD content is used directly. The commit id is written to trackedCommitIdPath
-   * (parent directories are created if necessary).
    *
-   * @param repository the repository
-   * @param trackedCommitIdPath the file to store the commit id
+   * @param changes the immutable changes contained in the commit.
    */
-  @Override
-  public void saveCurrentCommitId(Path repository, Path trackedCommitIdPath) {
-    Path gitFolder = repository.resolve(GIT_FOLDER);
-    Path head = gitFolder.resolve(FILE_HEAD);
-    try {
-      String commitId = "";
-      if (Files.exists(head)) {
-        String content = Files.readString(head).trim();
-        if (content.startsWith("ref:")) {
-          String ref = content.substring("ref:".length()).trim();
-          Path refPath = gitFolder.resolve(ref);
-          if (Files.exists(refPath)) {
-            commitId = Files.readString(refPath).trim();
-          } else {
-            // ref file does not exist so do not save anything
-            return;
-          }
-        } else {
-          commitId = content;
-        }
-      }
-      if (commitId.isEmpty()) {
-        // nothing to save
-        return;
-      }
-      Path parent = trackedCommitIdPath.getParent();
-      if (parent != null) {
-        Files.createDirectories(parent);
-      }
-      Files.writeString(trackedCommitIdPath, commitId);
-    } catch (IOException e) {
-      throw new IllegalStateException("Failed to save current commit id to " + trackedCommitIdPath, e);
+  public record GitCommit(List<GitChange> changes) {
+
+
+    /**
+     * Creates a new {@link GitCommit} with an immutable copy of the given changes.
+     *
+     * @param changes the changes contained in the commit.
+     */
+    public GitCommit {
+
+      changes = List.copyOf(changes);
+    }
+
+    /**
+     * Creates a new {@link GitCommit} from the given changes.
+     *
+     * @param changes the changes contained in the commit.
+     */
+    public GitCommit(GitChange... changes) {
+
+      this(List.of(changes));
     }
   }
 
